finished and looks all right

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Practicewooo</title>
+        <script src="rps.js" defer></script>
     </head>
-    <script src="rps.js"></script>
-    <input id="playertext" type="text">
+    <body>
+        <input id="playertext" type="text">
+        <div id="container"></div>
+    </body>
+    
 </html>
