All practice done and working well

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <input id="playertext" type="text">
         <div id="container"></div>
+        <button id="btn">Click Me</button>
     </body>
     
 </html>
